# bbpm

./: README.md  pyproject.toml
bbpm/: __init__.py  __main__.py  bbpackage.py  cli.py  errors.py  fetch.py  fsutil.py  git.py  load.py  manifest.py  paths.py
tests/: test_bbpm.py
